--- a/sirh-gestion-personnel/src/main/webapp/WEB-INF/web.xml
+++ b/sirh-gestion-personnel/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
 		<servlet-name>EditerCollaborateursController</servlet-name>
 		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>AjouterCollaborateurController</servlet-name>
+		<servlet-class>dev.sgp.web.AjouterCollaborateurController</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>ListerCollaborateursController</servlet-name>
 		<url-pattern>/collaborateurs/lister</url-pattern>
@@ -20,5 +24,9 @@
 	<servlet-mapping>
 		<servlet-name>EditerCollaborateursController</servlet-name>
 		<url-pattern>/collaborateurs/editer</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AjouterCollaborateurController</servlet-name>
+		<url-pattern>/collaborateurs/ajouter</url-pattern>
 	</servlet-mapping>
 </web-app>
